--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,17 @@
 server.port=8080
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=${url}
 # spring.datasource.url=jdbc:postgresql://mahmud.db.elephantsql.com/csewdzia
 
-spring.datasource.username=postgres
-spring.datasource.password=Dimitri2022!
+spring.datasource.username=${user}
+spring.datasource.password=${pass}
 
 # spring.datasource.username=csewdzia
 # spring.datasource.password=qTirii7h2j3Lex-m7xoa2F0dm34Kugel
 
-
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
+spring.jpa.show-sql=true
+# spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
